fix responsive search results alignment

--- a/resources/assets/sass/components/_footer.scss
+++ b/resources/assets/sass/components/_footer.scss
@@ -24,8 +24,11 @@ footer.main {
 
 	p {
 		color: $color__light_gray;
-		font-size: 16px;
 		margin-bottom: 10px;
+        font-family: $font_alt;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-size: 12px;
 		a {
 			color: $color__gray;
 			&:hover { color: $color__salmon; }
@@ -39,9 +42,6 @@ footer.main {
 	p.less-significant a {
 		color: #AEAEAE;
         display: inline-block;
-        font-family: $font_alt;
-        text-transform: uppercase;
-        letter-spacing: 2px;
         font-size: 10px;
         margin: 25px 0 0;
 
