--- a/resources/assets/sass/components/_nav.scss
+++ b/resources/assets/sass/components/_nav.scss
@@ -136,6 +136,7 @@ nav.main {
 @media (max-width:1050px) {
     nav.main ul.main-nav { padding: 0 5px !important; }
     nav.main .search { padding: 0 15px; }
+    nav.main .search svg { margin-right: 5px; }
     nav.main ul.main-nav > li > a { font-size: 14px;}
 }
 
